added CNAME file

--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
+    <head>
+        <link rel="stylesheet" type="text/css" href="stylesheet.css" media="screen"/>
+    </head>
 <body>
     <div id="header"> 
         <h1>Battle Boggle</h1>
@@ -14,7 +17,7 @@
         
       <div id="messagezone"></div>
 
-      
+
     <script scr="script.js">
 
     </script>
